change bootstrap --bs-gutter-x: 1.5rem; in #carreers .row to 0.5rem to avoid overflow of sections in xs and sm devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,6 +293,10 @@ main {
     margin: 0;
 }
 
+#carreer .row {
+    --bs-gutter-x: 0.5rem;
+}
+
 #carreer-foto-pianist {
     background: url('../images/carreer-diana-piano.png') no-repeat top center / cover;
     height: 500px;
